Персонаж больше не может становиться НА стены
Пофикшен баг, при котором персонаж мог становиться на клетку со стеной. Но персонаж всё равно может проходить сквозь стены на тайл пола.

--- a/ProjectN/Assembly-CSharp.csproj
+++ b/ProjectN/Assembly-CSharp.csproj
@@ -56,11 +56,11 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\TileData.cs" />
+    <Compile Include="Assets\Scripts\MapManager.cs" />
     <Compile Include="Assets\Scripts\PlayerUnitControl.cs" />
     <Compile Include="Assets\Scripts\MobBase.cs" />
     <Compile Include="Assets\Scripts\CamScript.cs" />
-    <Compile Include="Assets\Scripts\TileData.cs" />
-    <Compile Include="Assets\Scripts\TestScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
