Фикс ошибок после мерджа

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,7 @@ ProjectN/obj/Debug/
 ProjectN/Assembly-CSharp.csproj
 
 ProjectN/obj/
+ProjectN/.vs/
+ProjectN/UserSettings/
 
 ProjectN/.vs/ProjectN/v17/
