--- a/ProjectN/Assembly-CSharp.csproj
+++ b/ProjectN/Assembly-CSharp.csproj
@@ -60,33 +60,33 @@
     <Compile Include="Assets\Scripts\Pathfinding\PathNode.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\Pathfinder.cs" />
     <Compile Include="Assets\Scripts\UI\PlayerUnitSelectionPanel.cs" />
+    <Compile Include="Assets\Scripts\Tiles\RuleBaseTile.cs" />
     <Compile Include="Assets\Scripts\PlayerUnitControl.cs" />
     <Compile Include="Assets\Scripts\UnitBase.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\PathfinderDebug.cs" />
-    <Compile Include="Assets\Scripts\Tiles\RuleBaseTile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMPro.cginc" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\Resources\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
-    <None Include="Assets\Resources\TextMesh Pro\Shaders\TMP_Sprite.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro.cginc" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\Misc\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+    <None Include="Assets\Misc\TextMesh Pro\Shaders\TMP_Sprite.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
