--- a/ProjectN/Assembly-CSharp.csproj
+++ b/ProjectN/Assembly-CSharp.csproj
@@ -64,13 +64,14 @@
     <Compile Include="Assets\Scripts\IItemInfo.cs" />
     <Compile Include="Assets\Scripts\UI\ItemInventoryPresenter.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\ItemInfo.cs" />
+    <Compile Include="Assets\Scripts\UnitBehaviour.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\Pathfinder.cs" />
     <Compile Include="Assets\Scripts\UI\UnitStatsUI.cs" />
     <Compile Include="Assets\Scripts\UI\PlayerUnitSelectionPanel.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Tiles\RuleBaseTile.cs" />
+    <Compile Include="Assets\Scripts\EnemyBehaviour.cs" />
     <Compile Include="Assets\Scripts\UnitInventory.cs" />
     <Compile Include="Assets\Scripts\PlayerUnitHandler.cs" />
-    <Compile Include="Assets\Scripts\UnitBase.cs" />
     <Compile Include="Assets\Scripts\ItemScenePresenter.cs" />
   </ItemGroup>
   <ItemGroup>
