--- a/ProjectN/packages.config
+++ b/ProjectN/packages.config
@@ -3,4 +3,5 @@
   <package id="NPOI" version="2.5.6" targetFramework="net471" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net471" />
   <package id="SharpZipLib" version="1.3.3" targetFramework="net471" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net471" />
 </packages>
