--- a/ProjectN/Assembly-CSharp.csproj
+++ b/ProjectN/Assembly-CSharp.csproj
@@ -83,11 +83,12 @@
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\BackpackInfo.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\IStorableItemInfo.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Tiles\RuleBaseTile.cs" />
-    <Compile Include="Assets\Scripts\EnemyBehaviour.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\UnitInventory.cs" />
-    <Compile Include="Assets\Scripts\PlayerUnitHandler.cs" />
+    <Compile Include="Assets\Scripts\Core\PlayerUnitControl.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\UnitMovement.cs" />
     <Compile Include="Assets\Scripts\ItemScenePresenter.cs" />
+    <Compile Include="Assets\Scripts\Core\EnemyUnitControl.cs" />
+    <Compile Include="Assets\Scripts\Core\UnitControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro.cginc" />
