--- a/ProjectN/Assembly-CSharp.csproj
+++ b/ProjectN/Assembly-CSharp.csproj
@@ -95,6 +95,8 @@
     <Compile Include="Assets\Scripts\UI\UIHandler.cs" />
     <Compile Include="Assets\Scripts\ItemScenePresenter.cs" />
     <Compile Include="Assets\Scripts\Core\PlayerInput.cs" />
+    <Compile Include="Assets\Scripts\Core\Weapon.cs" />
+    <Compile Include="Assets\Scripts\Core\Unit\Actions\ReloadAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro.cginc" />
