--- a/ProjectN/Assembly-CSharp.Player.csproj
+++ b/ProjectN/Assembly-CSharp.Player.csproj
@@ -63,13 +63,13 @@
     <Compile Include="Assets\Scripts\UI\PathVisualizer.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\StorableArmorInfo.cs" />
     <Compile Include="Assets\Scripts\Core\PlayerInput.cs" />
-    <Compile Include="Assets\Scripts\CameraHandler.cs" />
+    <Compile Include="Assets\Scripts\Core\CameraHandler.cs" />
     <Compile Include="Assets\Scripts\UI\InventoryUI.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\ArmorInfo.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\PathNode.cs" />
-    <Compile Include="Assets\Scripts\Core\EnemyUnitControl.cs" />
+    <Compile Include="Assets\Scripts\Core\UnitControl\EnemyUnitControl.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\Actions\MoveAction.cs" />
-    <Compile Include="Assets\Scripts\EndTurnHandler.cs" />
+    <Compile Include="Assets\Scripts\Core\EndTurnHandler.cs" />
     <Compile Include="Assets\Scripts\UI\UnitUI.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\Actions\IAction.cs" />
     <Compile Include="Assets\Scripts\UI\ItemInventoryPresenter.cs" />
@@ -90,14 +90,15 @@
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\BackpackInfo.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\IStorableItemInfo.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Tiles\RuleBaseTile.cs" />
-    <Compile Include="Assets\Scripts\Core\UnitControl.cs" />
+    <Compile Include="Assets\Scripts\Core\UnitControl\UnitControl.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\UnitInventory.cs" />
-    <Compile Include="Assets\Scripts\Core\PlayerUnitControl.cs" />
+    <Compile Include="Assets\Scripts\Core\UnitControl\PlayerUnitControl.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\UnitMovement.cs" />
     <Compile Include="Assets\Scripts\UI\UIStates\UIStateEnemyTurn.cs" />
     <Compile Include="Assets\Scripts\UI\UIHandler.cs" />
     <Compile Include="Assets\Scripts\ItemScenePresenter.cs" />
-    <Compile Include="Assets\Scripts\Core\IMovable.cs" />
+    <Compile Include="Assets\Scripts\UI\HealthBar.cs" />
+    <Compile Include="Assets\Scripts\LootCrate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro.cginc" />
