--- a/ProjectN/Assembly-CSharp.Player.csproj
+++ b/ProjectN/Assembly-CSharp.Player.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\Scripts\ScriptableObjects\ActionData.cs" />
     <Compile Include="Assets\Scripts\UI\PathVisualizer.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\StorableArmorInfo.cs" />
+    <Compile Include="Assets\Scripts\Object.cs" />
     <Compile Include="Assets\Scripts\Core\PlayerInput.cs" />
     <Compile Include="Assets\Scripts\Core\CameraHandler.cs" />
     <Compile Include="Assets\Scripts\UI\InventoryUI.cs" />
@@ -70,17 +71,20 @@
     <Compile Include="Assets\Scripts\Core\UnitControl\EnemyUnitControl.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\Actions\MoveAction.cs" />
     <Compile Include="Assets\Scripts\Core\EndTurnHandler.cs" />
+    <Compile Include="Assets\Scripts\Core\Interfaces\IInteractable.cs" />
     <Compile Include="Assets\Scripts\UI\UnitUI.cs" />
-    <Compile Include="Assets\Scripts\Core\Unit\Actions\IAction.cs" />
+    <Compile Include="Assets\Scripts\Core\Interfaces\IAction.cs" />
     <Compile Include="Assets\Scripts\UI\ItemInventoryPresenter.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\BaseItemInfo.cs" />
     <Compile Include="Assets\Scripts\Storable.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\Unit.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\WeaponInfo.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\Pathfinder.cs" />
+    <Compile Include="Assets\Scripts\InteractableItem.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\MedicineInfo.cs" />
+    <Compile Include="Assets\Scripts\InteractableStorage.cs" />
     <Compile Include="Assets\Scripts\UI\HealthBar.cs" />
-    <Compile Include="Assets\Scripts\Core\Weapon.cs" />
+    <Compile Include="Assets\Scripts\Weapon.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\Actions\ReloadAction.cs" />
     <Compile Include="Assets\Scripts\UI\UIStates\UIStateGameUI.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\UnitHealth.cs" />
@@ -92,14 +96,12 @@
     <Compile Include="Assets\Scripts\ScriptableObjects\Tiles\RuleBaseTile.cs" />
     <Compile Include="Assets\Scripts\Core\UnitControl\UnitControl.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\UnitInventory.cs" />
+    <Compile Include="Assets\Scripts\LootCrate.cs" />
     <Compile Include="Assets\Scripts\Core\UnitControl\PlayerUnitControl.cs" />
     <Compile Include="Assets\Scripts\Core\Unit\UnitMovement.cs" />
     <Compile Include="Assets\Scripts\UI\UIStates\UIStateEnemyTurn.cs" />
     <Compile Include="Assets\Scripts\UI\UIHandler.cs" />
     <Compile Include="Assets\Scripts\ItemScenePresenter.cs" />
-    <Compile Include="Assets\Scripts\LootCrate.cs" />
-    <Compile Include="Assets\Scripts\UI\HealthBar.cs" />
-    <Compile Include="Assets\Scripts\LootCrate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro.cginc" />
