--- a/ProjectN/Assembly-CSharp.Player.csproj
+++ b/ProjectN/Assembly-CSharp.Player.csproj
@@ -66,8 +66,10 @@
     <Compile Include="Assets\Scripts\Object.cs" />
     <Compile Include="Assets\Scripts\Exit.cs" />
     <Compile Include="Assets\Scripts\Core\PlayerInput.cs" />
+    <Compile Include="Assets\Scripts\UI\Inventory\WeaponUI.cs" />
     <Compile Include="Assets\Scripts\Core\CameraHandler.cs" />
     <Compile Include="Assets\Scripts\UI\Inventory\InventoryUI.cs" />
+    <Compile Include="Assets\Scripts\UI\Inventory\BackpackUI.cs" />
     <Compile Include="Assets\Scripts\Core\Interfaces\IObject.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\ArmorInfo.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\PathNode.cs" />
@@ -76,6 +78,7 @@
     <Compile Include="Assets\Scripts\Core\EndTurnHandler.cs" />
     <Compile Include="Assets\Scripts\Core\Interfaces\IInteractable.cs" />
     <Compile Include="Assets\Scripts\UI\UnitUI.cs" />
+    <Compile Include="Assets\Scripts\UI\Inventory\ArmorUI.cs" />
     <Compile Include="Assets\Scripts\Core\Interfaces\IAction.cs" />
     <Compile Include="Assets\Scripts\UI\Inventory\ItemInventoryPresenter.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\BaseItemInfo.cs" />
@@ -83,6 +86,7 @@
     <Compile Include="Assets\Scripts\Core\Unit\Unit.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\WeaponInfo.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\Pathfinder.cs" />
+    <Compile Include="Assets\Scripts\UI\Inventory\ExternalUI.cs" />
     <Compile Include="Assets\Scripts\InteractableItem.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\Items\MedicineInfo.cs" />
     <Compile Include="Assets\Scripts\InteractableStorage.cs" />
@@ -109,9 +113,6 @@
     <Compile Include="Assets\Scripts\UI\UIHandler.cs" />
     <Compile Include="Assets\Scripts\Door.cs" />
     <Compile Include="Assets\Scripts\ItemScenePresenter.cs" />
-    <Compile Include="Assets\Scripts\UI\Inventory\BackpackUI.cs" />
-    <Compile Include="Assets\Scripts\UI\Inventory\ArmorUI.cs" />
-    <Compile Include="Assets\Scripts\UI\Inventory\ExternalUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Misc\TextMesh Pro\Shaders\TMPro.cginc" />
